# smarc

./: .gitignore  CMakeLists.txt  README.md  myscript.dbg  thresh.dbg
docs/: Gemfile  _config.yml  getting-started.md  index.md  kernels.md  smicro.md  smile.md
docs/_layouts/: default.html
docs/experiments/: hmm_step.md
smem/: CMakeLists.txt
smem/include/smem/: Dram.hpp  DramMemoryPort.hpp  MemCtrl.hpp  MemCtrlTimedPort.hpp  MemTypes.hpp  MemoryPort.hpp
smem/src/: Dram.cpp  DramMemoryPort.cpp  MemCtrl.cpp  MemCtrlTimedPort.cpp
smesh/: CMakeLists.txt  README.md
smesh/include/: SmeshCommand.hpp  SmeshConfig.hpp  SmeshDevice.hpp  SmeshLocalAddr.hpp  SmeshMemory.hpp  SmeshPorts.hpp  SmeshRS.hpp  SmeshState.hpp  SmeshTypes.hpp
smesh/src/: SmeshCommandDriver.cpp  SmeshCommandDriver.hpp  SmeshDevice.cpp  SmeshRS.cpp  SmeshShell.cpp  SmeshShell.hpp  tb_smesh_m0.cpp  tb_smesh_m1.cpp  tb_smesh_m2.cpp  tb_smesh_m3.cpp  tb_smesh_rs.cpp
smicro/: CMakeLists.txt  README.md
smicro/include/: AccelCmd.hpp  MemTypes.hpp  SmicroTypes.hpp  Utils.hpp  hal.h
smicro/progs/vvadd/: progplan.md
smicro/src/: AccelArraySumSoc.cpp  AccelArraySumSoc.hpp  AccelMemBridge.cpp  AccelMemBridge.hpp  Dram.cpp  Dram.hpp  L1.cpp  L1.hpp  L2.cpp  L2.hpp  MemCtrl.cpp  MemCtrl.hpp  MemTester.cpp  MemTester.hpp  MemXbar.cpp  MemXbar.hpp  NnAccel.cpp  NnAccel.hpp  RvCore.cpp  RvCore.hpp  SoC.cpp  SoC.hpp  Tile1Core.cpp  Tile1Core.hpp  hal_cascade.cpp  tb_smicro.cpp  test_vectadd.cpp
smile/: CMakeLists.txt  README.md
smile/docs/: accel_port.md
smile/include/: AccelArraySum.hpp  AccelArraySumMc.hpp  AccelDemoAdd.hpp  AccelPort.hpp  ArraySumAccel.hpp  Debugger.hpp  Diagnostics.hpp  Instruction.hpp  MemCtrlTimedPort.hpp  Tile1.hpp  Tile1_exec.hpp
smile/progs/: link_rv32.ld  prog.elf  smexit.c  smurf.c  smurf_debug.c  smurf_threads.c
smile/progs/core/: README.md  bitwise_imm_test.c  branch_bxx_test.c  fence_test.c  load_bh_test.c  m_extension_test.c  mem_stress.c  rtype_logic_test.c  rtype_shift_test.c  rtype_slt_test.c  shift_ri_test.c  smexit.c  smurf.c  smurf_debug.c  smurf_threads.c  store_bh_test.c
smile/progs/include/: accel.h
smile/progs/sci/: README.md  accel_sum_unsupported.c  hmm_step.c  sum_lpv.c  sum_lpv_asm_deprecated.c  threshold_lpv.c
smile/src/: AccelArraySum.cpp  AccelArraySumMc.cpp  AccelDemoAdd.cpp  ArraySumAccel.cpp  Debugger.cpp  Diagnostics.cpp  Instruction.cpp  MemCtrlTimedPort.cpp  Tile1.cpp  Tile1_exec.cpp  tb_tile1.cpp
smile/src/util/: FlatBinLoader.cpp  FlatBinLoader.hpp
smystolic/: CMakeLists.txt  README.md
